# proto

./: .clang-format  .gitignore  CMakeLists.txt  README.md  main
.github/workflows/: ci.yml
cmake/: CompilerFlags.cmake
docs/: README.md  architecture.md  development.md  getting-started.md
examples/: hello-world.md
include/: ansi.h  append.h  fileio.h  input.h  output.h  row.h  state.h  syntax_highlighting.h  terminal.h
include/internal/: ansi.h  buffer.h  change_stack.h  filetypes.h  find.h  ops.h  row.h  state.h  syntax_highlighting.h  window.h
include/proto/: fileio.h  terminal.h
scripts/: format.sh
src/: CMakeLists.txt  ansi.c  append.c  fileio.c  filetypes.c  find.c  input.c  main.c  ops.c  output.c  row.c  syntax_highlighting.c  terminal.c
src/core/: buffer.c  main.c  row.c
src/editing/: change_stack.c  find.c  ops.c
src/file/: fileio.c  filetypes.c
src/io/: append.c  input.c  output.c
src/synthesis/: syntax_highlighting.c
src/terminal/: ansi.c  terminal.c
